feat: global menu (built separately)